parser.js
module.exports = parse

function parse(input, opts) {
  // Wrap parser.parse to allow specifying the start rule
  // as a shorthand option
  if (!opts) {
    opts = {}
  }
  else if (typeof opts == 'string') {
    opts = { startRule: opts }
  }
  return parser.parse(input, opts)
}
var parser=(function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { script: peg$parsescript, command: peg$parsecommand, argument: peg$parseargument, continuationStart: peg$parsecontinuationStart },
        peg$startRuleFunction  = peg$parsescript,

        peg$c0 = function(statements) {
          return statements || []
        },
        peg$c1 = { type: "other", description: "whitespace" },
        peg$c2 = " ",
        peg$c3 = { type: "literal", value: " ", description: "\" \"" },
        peg$c4 = "\t",
        peg$c5 = { type: "literal", value: "\t", description: "\"\\t\"" },
        peg$c6 = "\n",
        peg$c7 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c8 = { type: "other", description: "a comment" },
        peg$c9 = "#",
        peg$c10 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c11 = /^[^\n]/,
        peg$c12 = { type: "class", value: "[^\\n]", description: "[^\\n]" },
        peg$c13 = function(head, tail, last) {
          var statements = [head]
          var prev = head
          map(tail, function (spaceOpSpaceCmd, i, cmds) {
            setOperator(spaceOpSpaceCmd[0], prev)
            statements.push(prev = spaceOpSpaceCmd[2])
          })

          if (last) {
            if (!prev) { debugger }
            setOperator(last, prev)
          }

          return statements

          function setOperator(operator, command) {
            while (command.next) {
              command = command.next
            }
            command.control = operator
          }
        },
        peg$c14 = "&",
        peg$c15 = { type: "literal", value: "&", description: "\"&\"" },
        peg$c16 = ";",
        peg$c17 = { type: "literal", value: ";", description: "\";\"" },
        peg$c18 = function(op) {
          return op == '\n' ? ';' : op
        },
        peg$c19 = function(statement, next) {
          if (typeof next !== 'undefined' && next) {
            next = next[1]
            statement.control = next[0]
            statement.next = next[1]
          } else {
            statement.control = ';'
            statement.next = null
          }
          return statement
        },
        peg$c20 = { type: "other", description: "a subshell" },
        peg$c21 = "(",
        peg$c22 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c23 = ")",
        peg$c24 = { type: "literal", value: ")", description: "\")\"" },
        peg$c25 = function(statements) {
          return {
            type: 'subshell',
            statements: statements,
          }
        },
        peg$c26 = { type: "other", description: "a single command" },
        peg$c27 = function(pre, name, post, pipe) {
          var command = {
            type: 'command',
            command: name,
            args: [],
            redirects: [],
            env: {},
            control: ';',
            next: null,
          }

          map(pre, first).concat(map(post, second)).forEach(function (token) {
            if (!token || !token.type) return
            switch (token.type) {
              case 'moveFd':
              case 'duplicateFd':
              case 'redirectFd':
                return command.redirects.push(token)
              case 'variableAssignment':
                return command.env[token.name] = token.value
              default:
                command.args.push(token)
            }
          })

          if (pipe) {
            command.redirects.push(pipe[1])
          }

          return command
        },
        peg$c28 = { type: "other", description: "a variable assignment" },
        peg$c29 = "=",
        peg$c30 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c31 = function(name, value) {
          return {type: 'variableAssignment', name: name, value: value}
        },
        peg$c32 = { type: "other", description: "an if/elif/else statement" },
        peg$c33 = "if",
        peg$c34 = { type: "literal", value: "if", description: "\"if\"" },
        peg$c35 = "then",
        peg$c36 = { type: "literal", value: "then", description: "\"then\"" },
        peg$c37 = "else",
        peg$c38 = { type: "literal", value: "else", description: "\"else\"" },
        peg$c39 = "fi",
        peg$c40 = { type: "literal", value: "fi", description: "\"fi\"" },
        peg$c41 = function(test, body, elifBlocks, elseBody) {
          return {
            type: 'ifElse',
            test: test,
            body: body,
            elifBlocks: elifBlocks.length ? elifBlocks : null,
            elseBody: elseBody ? elseBody[1] : null,
          }
        },
        peg$c42 = { type: "other", description: "a while/until loop" },
        peg$c43 = "while",
        peg$c44 = { type: "literal", value: "while", description: "\"while\"" },
        peg$c45 = "until",
        peg$c46 = { type: "literal", value: "until", description: "\"until\"" },
        peg$c47 = "do",
        peg$c48 = { type: "literal", value: "do", description: "\"do\"" },
        peg$c49 = "done",
        peg$c50 = { type: "literal", value: "done", description: "\"done\"" },
        peg$c51 = function(kind, test, body) {
          return {
            type: kind + 'Loop',
            test: test,
            body: body
          }
        },
        peg$c52 = { type: "other", description: "a for loop" },
        peg$c53 = "for",
        peg$c54 = { type: "literal", value: "for", description: "\"for\"" },
        peg$c55 = "in",
        peg$c56 = { type: "literal", value: "in", description: "\"in\"" },
        peg$c57 = function(loopVar, subjects, body) {
          return {
            type: 'forLoop',
            loopVariable: loopVar,
            subjects: subjects[1].map(second),
            body: body
          }
        },
        peg$c58 = { type: "other", description: "a case block" },
        peg$c59 = "case",
        peg$c60 = { type: "literal", value: "case", description: "\"case\"" },
        peg$c61 = "esac",
        peg$c62 = { type: "literal", value: "esac", description: "\"esac\"" },
        peg$c63 = function(selection, optionList) {
          return {
            type: 'case',
            selection: selection,
            optionList: optionList,
          }
        },
        peg$c64 = "&&",
        peg$c65 = { type: "literal", value: "&&", description: "\"&&\"" },
        peg$c66 = "||",
        peg$c67 = { type: "literal", value: "||", description: "\"||\"" },
        peg$c68 = function(operator, statement) {
          return [operator, statement]
        },
        peg$c69 = { type: "other", description: "time builtin" },
        peg$c70 = "time",
        peg$c71 = { type: "literal", value: "time", description: "\"time\"" },
        peg$c72 = "-",
        peg$c73 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c74 = /^[a-z]/,
        peg$c75 = { type: "class", value: "[a-z]", description: "[a-z]" },
        peg$c76 = function(flags, statements) {
          return {
            type: 'time',
            flags: flags,
            command: statements
          }
        },
        peg$c77 = { type: "other", description: "declare builtin" },
        peg$c78 = "declare",
        peg$c79 = { type: "literal", value: "declare", description: "\"declare\"" },
        peg$c80 = "typeset",
        peg$c81 = { type: "literal", value: "typeset", description: "\"typeset\"" },
        peg$c82 = "<&",
        peg$c83 = { type: "literal", value: "<&", description: "\"<&\"" },
        peg$c84 = ">&",
        peg$c85 = { type: "literal", value: ">&", description: "\">&\"" },
        peg$c86 = function(fd, op, dest) {
          if (fd == null) fd = op[0] == '<' ? 0 : 1;
          return {
            type: 'moveFd',
            fd: fd,
            op: op,
            dest: dest
          }
        },
        peg$c87 = function(src, op, dest) {
          if (src == null) src = op[0] == '<' ? 0 : 1;
          return {
            type: 'duplicateFd',
            srcFd: src,
            op: op,
            destFd: dest,
          }
        },
        peg$c88 = function(fd, op, filename) {
          if (fd == null) fd = op[0] == '<' ? 0 : 1;
          return {
            type: 'redirectFd',
            fd: fd,
            op: op,
            filename: filename
          }
        },
        peg$c89 = ">|",
        peg$c90 = { type: "literal", value: ">|", description: "\">|\"" },
        peg$c91 = ">>",
        peg$c92 = { type: "literal", value: ">>", description: "\">>\"" },
        peg$c93 = "&>>",
        peg$c94 = { type: "literal", value: "&>>", description: "\"&>>\"" },
        peg$c95 = "&>",
        peg$c96 = { type: "literal", value: "&>", description: "\"&>\"" },
        peg$c97 = "<",
        peg$c98 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c99 = ">",
        peg$c100 = { type: "literal", value: ">", description: "\">\"" },
        peg$c101 = /^[0-9]/,
        peg$c102 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c103 = function(digits) { return parseInt(join(digits), 10) },
        peg$c104 = { type: "other", description: "command name" },
        peg$c105 = function(name) {
          return name
        },
        peg$c106 = "[[",
        peg$c107 = { type: "literal", value: "[[", description: "\"[[\"" },
        peg$c108 = "[",
        peg$c109 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c110 = { type: "other", description: "command argument" },
        peg$c111 = "|",
        peg$c112 = { type: "literal", value: "|", description: "\"|\"" },
        peg$c113 = function(command) {
          return {type: 'pipe', command: command}
        },
        peg$c114 = /^[a-zA-Z0-9_]/,
        peg$c115 = { type: "class", value: "[a-zA-Z0-9_]", description: "[a-zA-Z0-9_]" },
        peg$c116 = function() { return text() },
        peg$c117 = "?",
        peg$c118 = { type: "literal", value: "?", description: "\"?\"" },
        peg$c119 = function(test) {
          return test
        },
        peg$c120 = "elif",
        peg$c121 = { type: "literal", value: "elif", description: "\"elif\"" },
        peg$c122 = function(test, body) {
          return {
            type: 'ifElse',
            test: test,
            body: body
          }
        },
        peg$c123 = { type: "other", description: "a case option" },
        peg$c124 = function(patternList, body) {
          var actualPatternList = []
          patternList.forEach(function (pattern, index) {
            actualPatternList.push(pattern)
            if (pattern !== '|' && pattern.containsPipe) {
              actualPatternList.push('|')
            }
            delete pattern.containsPipe
          })

          return {
            type: 'caseOption',
            patternList: actualPatternList,
            body: body,
          }
        },
        peg$c125 = { type: "other", description: "a case pattern" },
        peg$c126 = function(concatenation, pipe) {
          concatenation.containsPipe = (pipe !== null)
          return concatenation
        },
        peg$c127 = "]",
        peg$c128 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c129 = function(concatenation, pipe) {
          return {
            type: 'bracketExpression',
            value: concatenation,
            containsPipe: (pipe !== null),
          }
        },
        peg$c130 = { type: "other", description: "a case body" },
        peg$c131 = function(statementList, control) {
          control = control || ''
          control = ';' + control
          control = control.replace(/;{2,}/g,';;')

          return {
            control: control,
            value: statementList
          }
        },
        peg$c132 = function(statement, control) {
          statement.control = control || ';'
          return statement
        },
        peg$c133 = { type: "other", description: "concatenation of strings and/or variables" },
        peg$c134 = function(pieces) {
          return flattenConcatenation(pieces);
        },
        peg$c135 = function(cs) {
          return literal(cs)
        },
        peg$c136 = "\\",
        peg$c137 = { type: "literal", value: "\\", description: "\"\\\\\"" },
        peg$c138 = function(chr) { return chr },
        peg$c139 = { type: "any", description: "any character" },
        peg$c140 = /^[$"';&<>\n()[\]*?` ]/,
        peg$c141 = { type: "class", value: "[$\"';&<>\\n()\\[\\]*?` ]", description: "[$\"';&<>\\n()\\[\\]*?` ]" },
        peg$c142 = "*",
        peg$c143 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c144 = function() {
          return {
            type: 'glob',
            value: text()
          }
        },
        peg$c145 = { type: "other", description: "bareword" },
        peg$c146 = /^[$"';&<>\n()[*?|` ]/,
        peg$c147 = { type: "class", value: "[$\"';&<>\\n()\\[*?|` ]", description: "[$\"';&<>\\n()\\[*?|` ]" },
        peg$c148 = "$",
        peg$c149 = { type: "literal", value: "$", description: "\"$\"" },
        peg$c150 = "{",
        peg$c151 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c152 = "}",
        peg$c153 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c154 = "'",
        peg$c155 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c156 = /^[^']/,
        peg$c157 = { type: "class", value: "[^']", description: "[^']" },
        peg$c158 = function(inner) { return literal(inner) },
        peg$c159 = "\"",
        peg$c160 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c161 = function(contents) {
          var pieces = contents.map(function (it) {
            return isArray(it) ? literal(it) : it
          })
          return flattenConcatenation(pieces)
        },
        peg$c162 = "\\\\",
        peg$c163 = { type: "literal", value: "\\\\", description: "\"\\\\\\\\\"" },
        peg$c164 = function() { return '\\' },
        peg$c165 = "`",
        peg$c166 = { type: "literal", value: "`", description: "\"`\"" },
        peg$c167 = function(name) {
          return {type: 'variable', name: name}
        },
        peg$c168 = "${",
        peg$c169 = { type: "literal", value: "${", description: "\"${\"" },
        peg$c170 = /^[^}]/,
        peg$c171 = { type: "class", value: "[^}]", description: "[^}]" },
        peg$c172 = function(expr) {
          return {
            type:        'variableSubstitution',
            expression:  join(expr), // TODO subParser
          }
        },
        peg$c173 = "$(",
        peg$c174 = { type: "literal", value: "$(", description: "\"$(\"" },
        peg$c175 = function(commands) {
          return {
            type: 'commandSubstitution',
            commands: commands
          }
        },
        peg$c176 = function(input) {
          return { type: 'commandSubstitution', commands: parse(input.join('')) }
        },
        peg$c177 = "\\`",
        peg$c178 = { type: "literal", value: "\\`", description: "\"\\\\`\"" },
        peg$c179 = function() { return '`' },
        peg$c180 = /^[<>]/,
        peg$c181 = { type: "class", value: "[<>]", description: "[<>]" },
        peg$c182 = function(rw, commands) {
          return {
            type: 'processSubstitution',
            readWrite: rw,
            commands: commands,
          }
        },
        peg$c183 = ";;&",
        peg$c184 = { type: "literal", value: ";;&", description: "\";;&\"" },
        peg$c185 = ";;",
        peg$c186 = { type: "literal", value: ";;", description: "\";;\"" },
        peg$c187 = ";&",
        peg$c188 = { type: "literal", value: ";&", description: "\";&\"" },
        peg$c189 = function(op) {
          return op
        },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsescript() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parsespaceNL();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parsespaceNL();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsestatementList();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsespace() {
      var s0, s1;

      peg$silentFails++;
      if (input.charCodeAt(peg$currPos) === 32) {
        s0 = peg$c2;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c3); }
      }
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 9) {
          s0 = peg$c4;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c5); }
        }
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c1); }
      }

      return s0;
    }

    function peg$parsespaceNL() {
      var s0;

      s0 = peg$parsespace();
      if (s0 === peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 10) {
          s0 = peg$c6;
          peg$currPos++;
        } else {
          s0 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c7); }
        }
        if (s0 === peg$FAILED) {
          s0 = peg$parsecomment();
        }
      }

      return s0;
    }

    function peg$parsecomment() {
      var s0, s1, s2, s3;

      peg$silentFails++;
      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 35) {
        s1 = peg$c9;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c10); }
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        if (peg$c11.test(input.charAt(peg$currPos))) {
          s3 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c12); }
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          if (peg$c11.test(input.charAt(peg$currPos))) {
            s3 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c12); }
          }
        }
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 10) {
            s3 = peg$c6;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c7); }
          }
          if (s3 === peg$FAILED) {
            s3 = peg$parseEOF();
          }
          if (s3 !== peg$FAILED) {
            s1 = [s1, s2, s3];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c8); }
      }

      return s0;
    }

    function peg$parsestatementList() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      s1 = peg$parsestatement();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parsecontrolOperator();
        if (s4 !== peg$FAILED) {
          s5 = [];
          s6 = peg$parsespaceNL();
          while (s6 !== peg$FAILED) {
            s5.push(s6);
            s6 = peg$parsespaceNL();
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parsestatement();
            if (s6 !== peg$FAILED) {
              s4 = [s4, s5, s6];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parsecontrolOperator();
          if (s4 !== peg$FAILED) {
            s5 = [];
            s6 = peg$parsespaceNL();
            while (s6 !== peg$FAILED) {
              s5.push(s6);
              s6 = peg$parsespaceNL();
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parsestatement();
              if (s6 !== peg$FAILED) {
                s4 = [s4, s5, s6];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parsespace();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parsespace();
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parsecontrolOperator();
            if (s4 === peg$FAILED) {
              s4 = null;
            }
            if (s4 !== peg$FAILED) {
              s5 = [];
              s6 = peg$parsespaceNL();
              while (s6 !== peg$FAILED) {
                s5.push(s6);
                s6 = peg$parsespaceNL();
              }
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c13(s1, s2, s4);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsecontrolOperator() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parsespace();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parsespace();
      }
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 38) {
          s2 = peg$c14;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c15); }
        }
        if (s2 === peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 59) {
            s2 = peg$c16;
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c17); }
          }
          if (s2 === peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 10) {
              s2 = peg$c6;
              peg$currPos++;
            } else {
              s2 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c7); }
            }
          }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c18(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsestatement() {
      var s0, s1, s2, s3, s4;
